(style) fixing button from new Project, Projects and Select overflow x

--- a/src/form/Select.module.css
+++ b/src/form/Select.module.css
@@ -18,7 +18,7 @@
     height: 2.2rem;
     width: 80%;
     margin-top: 1rem;
-    margin-left: 1px;
+    margin-left: 2px;
     color: black;
   }
 }
