--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -89,6 +89,7 @@
     border-radius: 1rem;
     color: black;
     width: 100%;
+    height: 38rem;
   }
 
   .home_infos {
@@ -102,7 +103,8 @@
 
   .home_container img {
     margin-top: 3rem;
-    height: 30%;
+    height: 14rem;
+    width: 25rem;
   }
 }
 
