--- a/src/pages/NewProjects.module.css
+++ b/src/pages/NewProjects.module.css
@@ -1,7 +1,7 @@
 .formProject_container {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 40rem;
   width: 100%;
 }
 
@@ -15,5 +15,17 @@
 @media (min-width: 300px) and (max-width: 575.98px) {
   .formProject {
     margin: 3rem auto;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .formProject_container {
+    height: 57rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .formProject_container {
+    height: 50rem;
   }
 }
